# learn_langchain

./: .env.example  .gitignore  README.md  pyproject.toml
demo/: 01_01_verify_setup.py  01_02_env_config.py  01_03_dependency_check.py  02_01_chat_basics.py  02_02_invoke_modes.py  02_03_structured_output.py  03_01_prompt_templates.py  03_02_fewshot_and_history.py  03_03_practical_code_reviewer.py  04_01_output_parsers.py  04_02_pydantic_and_custom.py  04_03_practical_data_extractor.py  05_01_lcel_basics.py  05_02_parallel_and_passthrough.py  05_03_branching_and_fallback.py  05_04_practical_translator.py  06_01_document_and_splitter.py  06_02_rag_pipeline.py  06_03_practical_qa.py  07_01_retrieval_strategies.py  07_02_multi_and_ensemble.py  07_03_retrieval_comparison.py  08_01_conversation_memory.py  08_02_memory_strategies.py  08_03_rag_with_memory.py  09_01_tool_basics.py  09_02_tool_best_practices.py  09_03_tool_integration.py  10_01_react_agent.py  10_02_agent_advanced.py  10_03_practical_agent.py  11_01_agent_debug.py  11_02_error_handling.py  11_03_agent_optimization.py  12_01_custom_tool_api.py  12_02_database_file_tools.py  12_03_practical_toolkit.py  13_01_stategraph_basics.py  13_02_conditional_routing.py  13_03_practical_code_review.py  (+37 more)
docs/: 01-environment-setup.md  02-llm-basics.md  03-prompt-templates.md  04-output-parsers.md  05-chains.md  06-rag-basics.md  07-retrievers.md  08-memory.md  09-tools.md  10-agent-basics.md  11-agent-executor.md  12-custom-tools.md  13-langgraph-basics.md  14-langgraph-advanced.md  15-multi-agent.md  16-practice-project.md  (+19 more)
